--- a/css/pe-family-office.webflow.css
+++ b/css/pe-family-office.webflow.css
@@ -1313,7 +1313,7 @@ figcaption {
 .form-message.error {
   /* background-color: #f8d7da; */
   color: #721c24;
-  border: 1px solid #f5c6cb;
+  /* border: 1px solid #f5c6cb; */
   display: block; /* 当有error class时显示 */
 }
 
